--- a/popup/popup.html
+++ b/popup/popup.html
@@ -3,11 +3,14 @@
   <head>
     <link rel="stylesheet" href="button.css" />
     <link rel="stylesheet" href="popup.css" />
+    <link rel="stylesheet" href="search-results.css" />
     <script src="popup.js" defer></script>
   </head>
   <body>
     <div id="main">
-      <h2><img src="../images/frog24.png" /> FrogFind</h2>
+      <div id="header">
+        <h2><img src="../images/frog24.png" /></h2>
+      </div>
       <div class="separator"></div>
       <section class="section">
         <p>Search the window object for a specific property or value</p>
@@ -27,6 +30,7 @@
         </form>
       </section>
       <div class="separator separatormargin"></div>
+      <div id="result"></div>
     </div>
   </body>
 </html>
