add display dom results and highlighting

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -31,6 +31,7 @@
       </section>
       <div class="separator separatormargin"></div>
       <div id="result"></div>
+      <div id="dom-result"></div>
     </div>
   </body>
 </html>
